纠正Arrays.asList的使用